增加了日志审计功能

--- a/aspnet-core/src/YY.Frame.AbpCore.Core/Localization/SourceFiles/YoyoCmsTemplate-zh-Hans.xml
+++ b/aspnet-core/src/YY.Frame.AbpCore.Core/Localization/SourceFiles/YoyoCmsTemplate-zh-Hans.xml
@@ -235,5 +235,7 @@
     <text name="ClickHere" value="点击这里" />
     <text name="Apply" value="应用" />
     <text name="CustomRange" value="自定义范围" />
+    
+     <text name="AuditLog" value="日志审计" />
   </texts>
 </localizationDictionary>
